# cpp-utils

./: CMakeLists.txt
dynamic_enum/: DynamicEnum.cpp  DynamicEnum.h
merge_structs/: Merger.cpp  Merger.h
